# opencv-learning-tutorials

./: README.md  et
android-opencv-yolo/app/: CMakeLists.txt
android-opencv-yolo/app/src/main/cpp/: AndroidDebug.cpp  AndroidDebug.h  com_panjq_opencv_alg_ImagePro.h  imagePro.cpp  imagePro.h  native-lib.cpp  object_detection_yolov3.cpp  object_detection_yolov3.h
android-opencv-yolo/app/src/main/java/com/panjq/opencv/alg/: ImagePro.java
android-opencv-yolo/app/src/main/java/com/panjq/opencv/opencvdemo/: CopyFileTask.java  FileUtil.java  MainActivity.java
android-opencv-yolo/app/src/main/res/values/: strings.xml
cmakeDemo/cmakeDemo/: main.cpp
cmakeDemo/include/: myhello.h
cmakeDemo/lib/Debug/: my_lib.lib
cmakeDemo/myhello/: myhello.cpp
cmakeDemo/opencvCmakeDemo/: CMakeLists.txt  run.sh
cmakeDemo/opencvCmakeDemo/src/: CMakeLists.txt
data/: train_labels.txt
data/models/: README.md
data/models/my_voc/: .sh  test.sh  train.sh  voc.cfg  voc.data  voc.names
data/models/onnx/: label.txt
data/models/yolov3/: getModels.sh
dnn_tutorial/: object_detection_yolov3.cpp  object_detection_yolov3_image.cpp  object_detection_yolov3_my_voc.cpp  opencv_onnx_demo.cpp  yolov3_demo.cpp
dnn_tutorial/dnn_codes/: dnn_age_gender.cpp  dnn_classification.cpp  dnn_fcn.cpp  dnn_goturn.cpp  dnn_ssd.cpp  dnn_ssd_video.cpp
opencvDemo/: README.md
opencvDemo/CMakeDemo2/: README.md
opencvDemo/CMakeDemo2/create_lib/: CMakeLists.txt
opencvDemo/CMakeDemo2/project/: CMakeLists.txt
opencvDemo/CMakeDemo2/project/math/lib/: MathFunctions.lib
opencvDemo/CMakeDemo3/: CMakeLists.txt  README.md  main.cpp
opencvDemo/cmakeDemo/: CMakeLists.txt
opencvDemo/cmakeDemo/myhello/: CMakeLists.txt
opencvDemo/opencvCmakeDemo/: CMakeLists.txt  Debug.cpp  Debug.h  main.cpp
opencvDemo/opencvCmakeDemo/src/: myhello.cpp
opencvDemo/opencvSVM/: opencvSVM.sln
opencvDemo/opencvSVM/model/: SVM_HOG.xml  pca.xml
opencvDemo/opencvSVM/src/: ReadMe.txt  SVM.cpp  SVM.h  config.h  file_processing.cpp  file_processing.h  main.cpp  opencvSVM.vcxproj  opencvSVM.vcxproj.filters
opencvDemo/opencvSVM/src/Feature/: LBP.cpp  LBP.h  imageFeature.cpp  imageFeature.h
opencv_dnn_pro/: opencv_dnn_pro.sln
opencv_dnn_pro/opencv_dnn_pro/: ReadMe.txt  opencv_dnn_pro.vcxproj  opencv_dnn_pro.vcxproj.filters
opencv_dnn_pro/opencv_dnn_pro/Debug/: opencv_dnn_pro.ilk  opencv_dnn_pro.iobj  opencv_dnn_pro.ipdb  vc140.idb
opencv_dnn_pro/opencv_dnn_pro/Debug/opencv_dnn_pro.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  opencv_dnn_pro.lastbuildstate
opencv_dnn_pro/openpose-opencv/: openpose_for_image_test.py
